--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,34 +3,34 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
+% @book{einstein1920relativity,
+%   title={Relativity: the Special and General Theory},
+%   author={Einstein, Albert},
+%   year={1920},
+%   publisher={Methuen & Co Ltd},
+%   html={relativity.html}
+% }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+% @book{einstein1956investigations,
+%   bibtex_show={true},
+%   title={Investigations on the Theory of the Brownian Movement},
+%   author={Einstein, Albert},
+%   year={1956},
+%   publisher={Courier Corporation},
+%   preview={brownian-motion.gif}
+% }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{omoruyi2024beads,
+  abbr={APJ},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={"Beads-on-a-string" Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
+  author={Omoruyi, O., Tremblay, G. R., Combes, F., Davis, T. A., Gladders, M. D., Vikhlinin, A., Nulsen, P., Kharb, P., Baum, S. A., O’Dea, C. P., Sharon, K., Terrazas, B. A., Nevin, R., Schechter, A. L., Zuhone, J. A., McDonald, M., Dahle, H., Bayliss, M. B., Connor, T., Florian, M., Rigby, J. R., and Vaddi, S.},
+  journal={The Astrophysical Journal},
+  volume={963},
+  number={1},
+  pages={1-30},
+  year={2024},
+  publisher={The Astrophysical Journal}
 }
 
 @article{PhysRev.47.777,
