--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,9 +28,10 @@
   journal={The Astrophysical Journal},
   volume={963},
   number={1},
-  pages={1-30},
+  numpages={30},
   year={2024},
-  publisher={The Astrophysical Journal}
+  publisher={The Astrophysical Journal},
+  pdf={omo_beads_2312.06762v2.pdf}
 }
 
 @article{PhysRev.47.777,
