--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,7 @@
   year={2024},
   publisher={The Astrophysical Journal},
   pdf={omo_beads_2312.06762v2.pdf}
+  preview={brownian-motion.gif}
 }
 
 @article{PhysRev.47.777,
