--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,22 +3,22 @@
 
 @string{aps = {American Physical Society,}}
 
-% @book{einstein1920relativity,
-%   title={Relativity: the Special and General Theory},
-%   author={Einstein, Albert},
-%   year={1920},
-%   publisher={Methuen & Co Ltd},
-%   html={relativity.html}
-% }
+@book{einstein1920relativity,
+  title={Relativity: the Special and General Theory},
+  author={Einstein, Albert},
+  year={1920},
+  publisher={Methuen & Co Ltd},
+  html={relativity.html}
+}
 
-% @book{einstein1956investigations,
-%   bibtex_show={true},
-%   title={Investigations on the Theory of the Brownian Movement},
-%   author={Einstein, Albert},
-%   year={1956},
-%   publisher={Courier Corporation},
-%   preview={brownian-motion.gif}
-% }
+@book{einstein1956investigations,
+  bibtex_show={true},
+  title={Investigations on the Theory of the Brownian Movement},
+  author={Einstein, Albert},
+  year={1956},
+  publisher={Courier Corporation},
+  preview={brownian-motion.gif}
+}
 
 @article{omoruyi2024beads,
   abbr={APJ},
