update bib so it works

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,21 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{omoruyi2024beads,
+  abbr={APJ},
+  bibtex_show={true},
+  title={"Beads-on-a-string" Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
+  author={Omoruyi, O., Tremblay, G. R., Combes, F., Davis, T. A., Gladders, M. D., Vikhlinin, A., Nulsen, P., Kharb, P., Baum, S. A., O’Dea, C. P., Sharon, K., Terrazas, B. A., Nevin, R., Schechter, A. L., Zuhone, J. A., McDonald, M., Dahle, H., Bayliss, M. B., Connor, T., Florian, M., Rigby, J. R., and Vaddi, S.},
+  journal={The Astrophysical Journal},
+  volume={963},
+  number={1},
+  numpages={30},
+  year={2024},
+  publisher={The Astrophysical Journal},
+  pdf={omo_beads_2312.06762v2.pdf}
+  preview={beads.gif}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
