--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
+@book{omororuyi2024beads,
   title={beads on a string: the Special and General Theory},
   author={Einstein, Albert},
   year={1920},
