--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,12 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{omororuyi2024beads,
-  title={beads on a string: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@book{omoruyi2024beads,
+  title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
+  author={Omoruyi, Osase},
+  year={2024},
+  publisher={The Astrophysical Journal},
+  html={https://ui.adsabs.harvard.edu/abs/2024ApJ...963....1O/abstract}
 }
 
 @book{einstein1956investigations,
