--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   author={Omoruyi, Osase},
   year={2024},
   publisher={The Astrophysical Journal},
+  pdf={omo_beads_2312.06762v2.pdf},
   html={https://ui.adsabs.harvard.edu/abs/2024ApJ...963....1O/abstract}
 }
 
