--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   publisher={The Astrophysical Journal},
   pdf={omo_beads_2312.06762v2.pdf},
   preview={beads.gif},
+  video={https://www.youtube.com/watch?v=blvcW0M-REU},
   html={https://ui.adsabs.harvard.edu/abs/2024ApJ...963....1O/abstract}
 }
 
