--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,10 +4,11 @@
 @string{aps = {American Physical Society,}}
 
 @book{omoruyi2024beads,
+  bibtex_show={true},
   title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
-  author={Omoruyi, Osase},
+  author={Omoruyi, O., Tremblay, G. R., Combes, F., Davis, T. A., Gladders, M. D., Vikhlinin, A., Nulsen, P., Kharb, P., Baum, S. A., O’Dea, C. P., Sharon, K., Terrazas, B. A., Nevin, R., Schechter, A. L., Zuhone, J. A., McDonald, M., Dahle, H., Bayliss, M. B., Connor, T., Florian, M., Rigby, J. R., and Vaddi, S.},
   year={2024},
-  publisher={The Astrophysical Journal},
+  journal={The Astrophysical Journal},
   pdf={omo_beads_2312.06762v2.pdf},
   preview={beads.gif},
   video={https://www.youtube.com/watch?v=blvcW0M-REU},
