--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,9 @@
   author={Omoruyi, O., Tremblay, G. R., Combes, F., Davis, T. A., Gladders, M. D., Vikhlinin, A., Nulsen, P., Kharb, P., Baum, S. A., O’Dea, C. P., Sharon, K., Terrazas, B. A., Nevin, R., Schechter, A. L., Zuhone, J. A., McDonald, M., Dahle, H., Bayliss, M. B., Connor, T., Florian, M., Rigby, J. R., and Vaddi, S.},
   year={2024},
   journal={The Astrophysical Journal},
+  volume={963},
+  number={1},
+  numpages={30},
   pdf={omo_beads_2312.06762v2.pdf},
   preview={beads.gif},
   video={https://www.youtube.com/watch?v=blvcW0M-REU},
