--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,13 +2,13 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@string{apj = {The Astrophysical Journal,}}
 
 @article{omoruyi2024beads,
-  bibtex_show={true},
   title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
   author={Omoruyi, O., Tremblay, G. R., Combes, F., Davis, T. A., Gladders, M. D., Vikhlinin, A., Nulsen, P., Kharb, P., Baum, S. A., O’Dea, C. P., Sharon, K., Terrazas, B. A., Nevin, R., Schechter, A. L., Zuhone, J. A., McDonald, M., Dahle, H., Bayliss, M. B., Connor, T., Florian, M., Rigby, J. R., and Vaddi, S.},
   year={2024},
-  journal={The Astrophysical Journal},
+  journal=apj,
   volume={963},
   number={1},
   numpages={30},
@@ -17,6 +17,19 @@
   video={https://www.youtube.com/watch?v=blvcW0M-REU},
   html={https://ui.adsabs.harvard.edu/abs/2024ApJ...963....1O/abstract}
 }
+
+
+@article{omoruyi2024emulating,
+  title={Emulating the Illustris-TNG simulation with a Semi-analytic model},
+  author={Omoruyi, O., Terrazas, B., Cohen, Y., Pandya, V., Somerville, R., and Hernquist, L.},
+  year={2024},
+  numpages={25},
+  preview={tngsam.png}
+} 
+
+
+
+
 
 @book{einstein1956investigations,
   bibtex_show={true},
