--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
   year={2024},
   numpages={25},
   preview={tngsam.png},
-  additional_info={. *PDF available early November*.}
+  additional_info={*PDF available early November*.}
 } 
 
 @article{omoruyi2024view,
@@ -34,7 +34,7 @@
   year={2024},
   numpages={30},
   preview={a2597_chandra.png},
-  additional_info={. *PDF available early November*.}
+  additional_info={*PDF available early November*.}
 } 
 
 @article{omoruyi2024jwst,
@@ -43,7 +43,7 @@
   year={2024},
   numpages={20},
   preview={a2597_jwst.png},
-  additional_info={. *PDF available early December*.}
+  additional_info={*PDF available early December*.}
 } 
 
 @article{singha2023interplay,
@@ -60,13 +60,13 @@
 @article{singha2024quenched,
   title={A quenched galaxy at the site of supermassive black hole feedback},
   author={Singha, M. and Scharwächter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Pérez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O'Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
-  additional_info={Submitted to ApJ, expected on arXiv early-November 2024}
+  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
 }
 
 @article{cohen2024cosmic,
   title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
   author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
-  additional_info={In preparation. Expected on arXiv by late Fall 2024 - Spring 2025.}
+  additional_info={*In preparation. Expected on arXiv by late Fall 2024 - Spring 2025.*}
 }
 
 @article{ogle2023jwst,
@@ -74,11 +74,11 @@
   author={Ogle, Patrick and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
   journal={The Astrophysical Journal},
   year={2023},
-  additional_info={In preparation. Expected on arXiv late Fall 2024.}
+  additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
 }
 
 @article{elford2024close,
   title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
   author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. et al.},
-  additional_info={In preparation. Expected on arXiv late Fall 2024.}
+  additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
 }
