--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,3 +45,39 @@
   preview={a2597_jwst.png},
   additional_info={*PDF available early December*.}
 } 
+
+@article{singha2023interplay,
+  title={The Close AGN Reference Survey (CARS): An interplay between radio jets and AGN radiation in the radio-quiet AGN HE 0040-1105},
+  author={Singha, M. and Winkel, N. and Vaddi, S. and Perez Torres, M. and Gaspari, M. and Smirnova-Pinchukova, I. and O'Dea, C. P. and Combes, F. and Omoruyi, O. and Rose, T. and McElroy, R. and Husemann, B. and Davis, T. A. and Baum, S. A. and Lawlor-Forsyth, C. and Neumann, J. and Tremblay, G. R.},
+  journal={The Astrophysical Journal},
+  volume={959},
+  number={2},
+  numpages={25},
+  year={2023}
+}
+
+@article{singha2024quenched,
+  title={A quenched galaxy at the site of supermassive black hole feedback},
+  author={Singha, M. and Scharwächter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Pérez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O'Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
+  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
+}
+
+@article{cohen2024cosmic,
+  title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
+  author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
+  additional_info={*In preparation. Expected on arXiv by late Fall 2024 - Spring 2025.*}
+}
+
+@article{ogle2023jwst,
+  title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
+  author={Ogle, Patrick and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
+  journal={The Astrophysical Journal},
+  year={2023},
+  additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
+}
+
+@article{elford2024close,
+  title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
+  author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. et al.},
+  additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
+}
