--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -55,3 +55,15 @@
   numpages={25},
   year={2023}
 }
+
+@article{singha2024quenched,
+  title={A quenched galaxy at the site of supermassive black hole feedback},
+  author={Singha, M. and Scharwächter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Pérez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O'Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
+  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
+}
+
+@article{cohen2024cosmic,
+  title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
+  author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
+  additional_info={*In preparation. Expected on arXiv by late Fall 2024 - Spring 2025.*}
+}
