--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,8 +47,8 @@
 } 
 
 @article{singha2023interplay,
-  title={The Close AGN Reference Survey (CARS): An interplay between radio jets and AGN radiation in the radio-quiet AGN HE 0040-1105},
-  author={Singha, M. and Winkel, N. and Vaddi, S. and Perez Torres, M. and Gaspari, M. and Smirnova-Pinchukova, I. and O'Dea, C. P. and Combes, F. and Omoruyi, O. and Rose, T. and McElroy, R. and Husemann, B. and Davis, T. A. and Baum, S. A. and Lawlor-Forsyth, C. and Neumann, J. and Tremblay, G. R.},
+  title={The Close AGN Reference Survey (CARS): An interplay between radio jets, AGN radiation in the radio-quiet AGN HE 0040-1105},
+  author={Singha, M., Winkel, N., Vaddi, S., Perez Torres, M., Gaspari, M., Smirnova-Pinchukova, I., O'Dea, C. P., Combes, F., Omoruyi, O., Rose, T., McElroy, R., Husemann, B., Davis, T. A., Baum, S. A., Lawlor-Forsyth, C., Neumann, J., and Tremblay, G. R.},
   journal={The Astrophysical Journal},
   volume={959},
   number={2},
@@ -58,12 +58,6 @@
 
 @article{singha2024quenched,
   title={A quenched galaxy at the site of supermassive black hole feedback},
-  author={Singha, M. and Scharwächter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Pérez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O'Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
+  author={Singha, M., Scharwächter, J., Kakkad, D., Omoruyi, O., Rojas, A., Laha, S., Pérez-Torres, M., Combes, F., Sadaula, D. R., Baum, S. A., O'Dea, C. P., Tremblay, G. R., and Sebastian, B.},
   additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
-}
-
-@article{cohen2024cosmic,
-  title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
-  author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
-  additional_info={*In preparation. Expected on arXiv by late Fall 2024 - Spring 2025.*}
 }
