--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,3 +56,8 @@
   year={2023}
 }
 
+@article{singha2024quenched,
+  title={A quenched galaxy at the site of supermassive black hole feedback},
+  author={Singha, M., Scharwachter, J., Kakkad, D., Omoruyi, O., Rojas, A., Laha, S., Perez-Torres, M., Combes, F., Sadaula, D. R., Baum, S. A., O'Dea, C. P., Tremblay, G. R., and Sebastian, B.},
+  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
+}
