--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,7 +57,7 @@
 }
 
 @article{singha2024quenched,
-  title={A quenched galaxy at the site of supermassive black hole feedback},
+  title={A quenched galaxy},
   author={Singha, M. and Sebastian, B.},
-  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
+  additional_info={*Submitted to ApJ*}
 }
