--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,5 +59,6 @@
 @article{singha2024quenched,
   title={A quenched galaxy},
   author={Singha, M. and Sebastian, B.},
+  year={2024},
   additional_info={*Submitted to ApJ*}
 }
