--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,8 +57,8 @@
 }
 
 @article{singha2024quenched,
-  title={A quenched galaxy},
-  author={Singha, M. and Sebastian, B.},
+  title={A quenched galaxy at the site of supermassive black hole feedback},
+  author={Singha, M., Scharwachter, J., Kakkad, D., Omoruyi, O., Rojas, A., Laha, S., Perez-Torres, M., Combes, F., Sadaula, D. R., Baum, S. A., O'Dea, C. P., Tremblay, G. R., and Sebastian, B.},
   year={2024},
-  additional_info={*Submitted to ApJ*}
+  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
 }
