--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -62,3 +62,25 @@
   year={2024},
   additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
 }
+
+@article{cohen2024cosmic,
+  title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
+  year={2024},
+  author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
+  additional_info={*In preparation. Expected on arXiv by late Fall 2024 - Spring 2025.*}
+}
+
+@article{ogle2023jwst,
+  title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
+  author={Ogle, Patrick and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
+  journal={The Astrophysical Journal},
+  year={2024},
+  additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
+}
+
+@article{elford2024close,
+  title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
+  author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. et al.},
+  year={2024},
+  additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
+}
