--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 
 @article{omoruyi2024beads,
   title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
-  author={Omoruyi, O., Tremblay, G. R., Combes, F., Davis, T. A., Gladders, M. D., Vikhlinin, A., Nulsen, P., Kharb, P., Baum, S. A., O’Dea, C. P., Sharon, K., Terrazas, B. A., Nevin, R., Schechter, A. L., Zuhone, J. A., McDonald, M., Dahle, H., Bayliss, M. B., Connor, T., Florian, M., Rigby, J. R., and Vaddi, S.},
+  author={Omoruyi, O. and Tremblay, G. R. and Combes, F. and Davis, T. A. and Gladders, M. D. and Vikhlinin, A. and Nulsen, P. and Kharb, P. and Baum, S. A. and O’Dea, C. P. and Sharon, K. and Terrazas, B. A. and Nevin, R. and Schechter, A. L. and Zuhone, J. A. and McDonald, M. and Dahle, H. and Bayliss, M. B. and Connor, T. and Florian, M. and Rigby, J. R. and Vaddi, S.},
   year={2024},
   journal=apj,
   volume={963},
@@ -21,7 +21,7 @@
 
 @article{omoruyi2024emulating,
   title={Emulating the Illustris-TNG simulation with a Semi-analytic model},
-  author={Omoruyi, O., Terrazas, B., Cohen, Y., Pandya, V., Somerville, R., and Hernquist, L.},
+  author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
   year={2024},
   numpages={25},
   preview={tngsam.png},
@@ -30,7 +30,7 @@
 
 @article{omoruyi2024view,
   title={A 600 ks Chandra View of Abell 2597},
-  author={Omoruyi, O., Tremblay, G., Vikhlinin, A., Dabhade, P., Raychaudhury, S., Markevitch, M., Zuhone, J., Nulsen, P., Baum, S. A., O’Dea, C. P., Clarke, T., Randall, S., Kharb, P., Gulati, S., and Vaddi, S.},
+  author={Omoruyi, O. and Tremblay, G. and Vikhlinin, A. and Dabhade, P. and Raychaudhury, S. and Markevitch, M. and Zuhone, J. and Nulsen, P. and Baum, S. A. and O’Dea, C. P. and Clarke, T. and Randall, S. and Kharb, P. and Gulati, S. and Vaddi, S.},
   year={2024},
   numpages={30},
   preview={a2597_chandra.png},
@@ -39,7 +39,7 @@
 
 @article{omoruyi2024jwst,
   title={A JWST MIRI View of the Heart of Abell 2597},
-  author={Omoruyi, O., Tremblay, G., Ashby, M., Baum, S., Blanton, E., Bremer, M., Bulbul, G., Clarke, T., Combes, F., Connor, T., David, L., Davis, T., Donahue, M., Edge, A., Edwards, L., Fabian, A., Forman, W., Gaspari, M., Grace, S., Greene, J., Hamer, S., Jones, C., Kraft, R., Li, Y., McDonald, M., McNamara, B., Nevin, R., Nulsen, P., O’Dea, C., Ogle, P., Oonk, R., Powell, M., Randall, Reefe, M., S., Russell, H., Salome, P., Schechter, A., Simionescu, A., Starikova, S., Su, Y., Sun, M., Terrazas, B., Urry, C., Vantyghem, A., Vikhlinin, A., Voit, M., Wilkes, B., Worku, K., and ZuHone, J.},
+  author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
   year={2024},
   numpages={20},
   preview={a2597_jwst.png},
@@ -48,7 +48,7 @@
 
 @article{singha2023interplay,
   title={The Close AGN Reference Survey (CARS): An interplay between radio jets, AGN radiation in the radio-quiet AGN HE 0040-1105},
-  author={Singha, M., Winkel, N., Vaddi, S., Perez Torres, M., Gaspari, M., Smirnova-Pinchukova, I., O'Dea, C. P., Combes, F., Omoruyi, O., Rose, T., McElroy, R., Husemann, B., Davis, T. A., Baum, S. A., Lawlor-Forsyth, C., Neumann, J., and Tremblay, G. R.},
+  author={Singha, M. and Winkel, N. and Vaddi, S. and Perez Torres, M. and Gaspari, M. and Smirnova-Pinchukova, I. and O’Dea, C. P. and Combes, F. and Omoruyi, O. and Rose, T. and McElroy, R. and Husemann, B. and Davis, T. A. and Baum, S. A. and Lawlor-Forsyth, C. and Neumann, J. and Tremblay, G. R.},
   journal={The Astrophysical Journal},
   volume={959},
   number={2},
@@ -58,7 +58,7 @@
 
 @article{singha2024quenched,
   title={A quenched galaxy at the site of supermassive black hole feedback},
-  author={Singha, M., Scharwachter, J., Kakkad, D., Omoruyi, O., Rojas, A., Laha, S., Perez-Torres, M., Combes, F., Sadaula, D. R., Baum, S. A., O'Dea, C. P., Tremblay, G. R., and Sebastian, B.},
+  author={Singha, M. and Scharwachter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Perez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O’Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
   year={2024},
   additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
 }
@@ -72,7 +72,7 @@
 
 @article{ogle2023jwst,
   title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
-  author={Ogle, Patrick and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
+  author={Ogle, P. and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
   journal={The Astrophysical Journal},
   year={2024},
   additional_info={*In preparation. Expected on arXiv late Fall 2024.*}
