--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 @string{apj = {The Astrophysical Journal}}
+@string{mnras = {Monthly Notices of the Royal Astronomical Society}}
 
 @article{omoruyi2024beads,
   title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
@@ -25,6 +26,7 @@
   author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
   year={2024},
   numpages={25},
+  journal=mnras,
   preview={tngsam.png},
   type={lead},
   additional_info={*PDF available early November*}
@@ -35,6 +37,7 @@
   author={Omoruyi, O. and Tremblay, G. and Vikhlinin, A. and Dabhade, P. and Raychaudhury, S. and Markevitch, M. and Zuhone, J. and Nulsen, P. and Baum, S. A. and O’Dea, C. P. and Clarke, T. and Randall, S. and Kharb, P. and Gulati, S. and Vaddi, S.},
   year={2024},
   numpages={30},
+  journal=apj,
   preview={a2597_chandra.png},
   additional_info={*PDF available early November*}
 } 
@@ -44,6 +47,7 @@
   author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
   year={2024},
   numpages={20},
+  journal=apj,
   preview={a2597_jwst.png},
   type={lead},
   additional_info={*PDF available early December*}
@@ -64,6 +68,7 @@
   title={A quenched galaxy at the site of supermassive black hole feedback},
   author={Singha, M. and Scharwachter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Perez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O’Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
   year={2024},
+  journal=apj,
   type={contributing},
   additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
 }
@@ -71,6 +76,7 @@
 @article{cohen2024cosmic,
   title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
   year={2024},
+  journal=mnras,
   type={contributing},
   author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
   additional_info={*In preparation. Expected on arXiv by late F24-S25*}
@@ -89,6 +95,7 @@
   title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
   author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. et al.},
   year={2024},
+  journal=apj,
   type={contributing},
   additional_info={*In preparation. Expected on arXiv late Fall 2024*}
 }
