--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 @string{apj = {The Astrophysical Journal}}
 @string{mnras = {Monthly Notices of the Royal Astronomical Society}}
 
-@article{omoruyi2024beads,
+@leadarticle{omoruyi2024beads,
   title={Beads-on-a-string Star Formation Tied to One of the Most Powerful Active Galactic Nucleus Outbursts Observed in a Cool-core Galaxy Cluster},
   author={Omoruyi, O. and Tremblay, G. R. and Combes, F. and Davis, T. A. and Gladders, M. D. and Vikhlinin, A. and Nulsen, P. and Kharb, P. and Baum, S. A. and O’Dea, C. P. and Sharon, K. and Terrazas, B. A. and Nevin, R. and Schechter, A. L. and Zuhone, J. A. and McDonald, M. and Dahle, H. and Bayliss, M. B. and Connor, T. and Florian, M. and Rigby, J. R. and Vaddi, S.},
   year={2024},
@@ -21,7 +21,7 @@
 }
 
 
-@article{omoruyi2024emulating,
+@leadunpublished{omoruyi2024emulating,
   title={Emulating the Illustris-TNG simulation with a Semi-analytic model},
   author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
   year={2024},
@@ -32,7 +32,7 @@
   additional_info={*PDF available early November*}
 } 
 
-@article{omoruyi2024view,
+@leadunpublished{omoruyi2024view,
   title={A 600 ks Chandra View of Abell 2597},
   author={Omoruyi, O. and Tremblay, G. and Vikhlinin, A. and Dabhade, P. and Raychaudhury, S. and Markevitch, M. and Zuhone, J. and Nulsen, P. and Baum, S. A. and O’Dea, C. P. and Clarke, T. and Randall, S. and Kharb, P. and Gulati, S. and Vaddi, S.},
   year={2024},
@@ -42,7 +42,7 @@
   additional_info={*PDF available early November*}
 } 
 
-@article{omoruyi2024jwst,
+@leadunpublished{omoruyi2024jwst,
   title={A JWST MIRI View of the Heart of Abell 2597},
   author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
   year={2024},
@@ -53,7 +53,7 @@
   additional_info={*PDF available early December*}
 } 
 
-@article{singha2023interplay,
+@coarticle{singha2023interplay,
   title={The Close AGN Reference Survey (CARS): An interplay between radio jets, AGN radiation in the radio-quiet AGN HE 0040-1105},
   author={Singha, M. and Winkel, N. and Vaddi, S. and Perez Torres, M. and Gaspari, M. and Smirnova-Pinchukova, I. and O’Dea, C. P. and Combes, F. and Omoruyi, O. and Rose, T. and McElroy, R. and Husemann, B. and Davis, T. A. and Baum, S. A. and Lawlor-Forsyth, C. and Neumann, J. and Tremblay, G. R.},
   journal={The Astrophysical Journal},
@@ -64,7 +64,7 @@
   year={2023}
 }
 
-@article{singha2024quenched,
+@counpublished{singha2024quenched,
   title={A quenched galaxy at the site of supermassive black hole feedback},
   author={Singha, M. and Scharwachter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Perez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O’Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
   year={2024},
@@ -73,7 +73,7 @@
   additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
 }
 
-@article{cohen2024cosmic,
+@counpublished{cohen2024cosmic,
   title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
   year={2024},
   journal=mnras,
@@ -82,7 +82,7 @@
   additional_info={*In preparation. Expected on arXiv by late F24-S25*}
 }
 
-@article{ogle2023jwst,
+@counpublished{ogle2023jwst,
   title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
   author={Ogle, P. and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
   journal={The Astrophysical Journal},
@@ -91,7 +91,7 @@
   additional_info={*In preparation. Expected on arXiv late Fall 2024*}
 }
 
-@article{elford2024close,
+@counpublished{elford2024close,
   title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
   author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. et al.},
   year={2024},
