--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,7 +93,7 @@
 
 @counpublished{elford2024close,
   title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
-  author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. et al.},
+  author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. and Tremblay, G. R. and Singha, M. and Gaspari, M. and Winkel, N.},
   year={2024},
   journal=apj,
   type={contributing},
