--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
   journal=mnras,
   preview={tngsam.png},
   type={lead},
-  additional_info={*PDF available early November*}
+  pdf={omo_beads_2312.06762v2.pdf}
 } 
 
 @leadunpublished{omoruyi2024view,
@@ -39,7 +39,7 @@
   numpages={30},
   journal=apj,
   preview={a2597_chandra.png},
-  additional_info={*PDF available early November*}
+  pdf={omo_beads_2312.06762v2.pdf}
 } 
 
 @leadunpublished{omoruyi2024jwst,
@@ -50,7 +50,7 @@
   journal=apj,
   preview={a2597_jwst.png},
   type={lead},
-  additional_info={*PDF available early December*}
+  additional_info={*PDF available December*}
 } 
 
 @coarticle{singha2023interplay,
@@ -61,6 +61,7 @@
   number={2},
   numpages={25},
   type={contributing},
+  html={https://ui.adsabs.harvard.edu/abs/2023ApJ...959..107S/abstract},
   year={2023}
 }
 
@@ -70,7 +71,7 @@
   year={2024},
   journal=apj,
   type={contributing},
-  additional_info={*Submitted to ApJ, expected on arXiv early-November 2024*}
+  additional_info={*Submitted to ApJ, expected on arXiv November 2024*}
 }
 
 @counpublished{cohen2024cosmic,
@@ -88,7 +89,7 @@
   journal={The Astrophysical Journal},
   year={2024},
   type={contributing},
-  additional_info={*In preparation. Expected on arXiv late Fall 2024*}
+  additional_info={*submitted to ApJ*}
 }
 
 @counpublished{elford2024close,
