--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,6 +61,7 @@
   number={2},
   numpages={25},
   type={contributing},
+  preview={singha23.png},
   html={https://ui.adsabs.harvard.edu/abs/2023ApJ...959..107S/abstract},
   year={2023}
 }
