--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -72,6 +72,7 @@
   year={2024},
   journal=apj,
   type={contributing},
+  preview={singha24.png},
   additional_info={*Submitted to ApJ, expected on arXiv November 2024*}
 }
 
@@ -84,12 +85,13 @@
   additional_info={*In preparation. Expected on arXiv by late F24-S25*}
 }
 
-@counpublished{ogle2023jwst,
+@counpublished{ogle2024jwst,
   title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
   author={Ogle, P. and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
   journal={The Astrophysical Journal},
   year={2024},
   type={contributing},
+  preview={ogle24.png},
   additional_info={*submitted to ApJ*}
 }
 
