--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
   journal=mnras,
   preview={tngsam.png},
   type={lead},
-  pdf={omo_beads_2312.06762v2.pdf}
+  pdf={tngsam.pdf}
 } 
 
 @leadunpublished{omoruyi2024view,
