--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@
   numpages={30},
   journal=apj,
   preview={a2597_chandra.png},
-  pdf={omo_beads_2312.06762v2.pdf}
+  pdf={omo_a2597.pdf}
 } 
 
 @leadunpublished{omoruyi2024jwst,
