--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,8 @@
   journal=mnras,
   preview={tngsam.png},
   type={lead},
-  pdf={tngsam.pdf}
+  pdf={tngsam.pdf},
+  additional_info={*Expected on arXiv December 2024*}
 } 
 
 @leadunpublished{omoruyi2024view,
@@ -39,7 +40,9 @@
   numpages={30},
   journal=apj,
   preview={a2597_chandra.png},
-  pdf={omo_a2597.pdf}
+  pdf={omo_a2597.pdf},
+  additional_info={*Expected on arXiv December 2024*}
+
 } 
 
 @leadunpublished{omoruyi2024jwst,
@@ -50,7 +53,7 @@
   journal=apj,
   preview={a2597_jwst.png},
   type={lead},
-  additional_info={*PDF available December*}
+  additional_info={*PDF available December, expected on arXiv January 2025*}
 } 
 
 @coarticle{singha2023interplay,
@@ -73,7 +76,7 @@
   journal=apj,
   type={contributing},
   preview={singha24.png},
-  additional_info={*Submitted to ApJ, expected on arXiv November 2024*}
+  additional_info={*Submitted to ApJ, expected on arXiv December 2024*}
 }
 
 @counpublished{ogle2024jwst,
