--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@
   preview={tngsam.png},
   type={lead},
   pdf={tngsam.pdf},
-  additional_info={*Expected on arXiv December 2024*}
+  additional_info={*Expected on arXiv December*}
 } 
 
 @leadunpublished{omoruyi2024view,
@@ -41,19 +41,19 @@
   journal=apj,
   preview={a2597_chandra.png},
   pdf={omo_a2597.pdf},
-  additional_info={*Expected on arXiv December 2024*}
+  additional_info={*Expected on arXiv December*}
 
 } 
 
 @leadunpublished{omoruyi2024jwst,
   title={A JWST MIRI View of the Heart of Abell 2597},
   author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
-  year={2024},
+  year={2025},
   numpages={20},
   journal=apj,
   preview={a2597_jwst.png},
   type={lead},
-  additional_info={*PDF available December, expected on arXiv January 2025*}
+  additional_info={*PDF available December, expected on arXiv January*}
 } 
 
 @coarticle{singha2023interplay,
