--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,19 +21,27 @@
 }
 
 
-@leadunpublished{omoruyi2024emulating,
+@leadunpublished{omoruyi2025emulating,
   title={Emulating the Illustris-TNG simulation with a Semi-analytic model},
   author={Omoruyi, O. and Terrazas, B. and Cohen, Y. and Pandya, V. and Somerville, R. and Hernquist, L.},
-  year={2024},
+  year={2025},
   numpages={25},
   journal=mnras,
   preview={tngsam.png},
   type={lead},
   pdf={tngsam.pdf},
-  additional_info={*Expected on arXiv December*}
+  additional_info={*Expected on arXiv March*}
 } 
 
-@leadunpublished{omoruyi2024view,
+@leadunpublished{omoruyi2025hist,
+  title={The Extractive Gaze: How Race, Gender and Capitalism Shaped the Development of American Astronomical Stations in South Africa},
+  author={Omoruyi, O.},
+  year={2025},
+  numpages={30},
+  preview={boyden_carina_workers.jpg}
+} 
+
+@leadunpublished{omoruyi2025view,
   title={A 600 ks Chandra View of Abell 2597},
   author={Omoruyi, O. and Tremblay, G. and Vikhlinin, A. and Dabhade, P. and Raychaudhury, S. and Markevitch, M. and Zuhone, J. and Nulsen, P. and Baum, S. A. and O’Dea, C. P. and Clarke, T. and Randall, S. and Kharb, P. and Gulati, S. and Vaddi, S.},
   year={2024},
@@ -41,11 +49,11 @@
   journal=apj,
   preview={a2597_chandra.png},
   pdf={omo_a2597.pdf},
-  additional_info={*Expected on arXiv December*}
+  additional_info={*Expected on arXiv March*}
 
 } 
 
-@leadunpublished{omoruyi2024jwst,
+@leadunpublished{omoruyi2025jwst,
   title={A JWST MIRI View of the Heart of Abell 2597},
   author={Omoruyi, O. and Tremblay, G. and Ashby, M. and Baum, S. and Blanton, E. and Bremer, M. and Bulbul, G. and Clarke, T. and Combes, F. and Connor, T. and David, L. and Davis, T. and Donahue, M. and Edge, A. and Edwards, L. and Fabian, A. and Forman, W. and Gaspari, M. and Grace, S. and Greene, J. and Hamer, S. and Jones, C. and Kraft, R. and Li, Y. and McDonald, M. and McNamara, B. and Nevin, R. and Nulsen, P. and O’Dea, C. and Ogle, P. and Oonk, R. and Powell, M. and Randall, Reefe, M. and Russell, H. and Salome, P. and Schechter, A. and Simionescu, A. and Starikova, S. and Su, Y. and Sun, M. and Terrazas, B. and Urry, C. and Vantyghem, A. and Vikhlinin, A. and Voit, M. and Wilkes, B. and Worku, K. and ZuHone, J.},
   year={2025},
@@ -69,40 +77,40 @@
   year={2023}
 }
 
-@counpublished{singha2024quenched,
+@counpublished{singha2025quenched,
   title={A quenched galaxy at the site of supermassive black hole feedback},
   author={Singha, M. and Scharwachter, J. and Kakkad, D. and Omoruyi, O. and Rojas, A. and Laha, S. and Perez-Torres, M. and Combes, F. and Sadaula, D. R. and Baum, S. A. and O’Dea, C. P. and Tremblay, G. R. and Sebastian, B.},
-  year={2024},
+  year={2025},
   journal=apj,
   type={contributing},
   preview={singha24.png},
-  additional_info={*Submitted to ApJ, expected on arXiv December 2024*}
+  additional_info={*Submitted to ApJ, expected on arXiv June 2025*}
 }
 
-@counpublished{ogle2024jwst,
+@counpublished{ogle2025jwst,
   title={The JWST View of Cygnus A: Jet-Driven Outflow with a Twist},
   author={Ogle, P. and Aravindan, A. and Ashby, M. and Azadi, M. and Baum, S. and Carilli, C. and Chiaberge, M. and Duggal, C. and Gebhardt, K. and Hyman, S. and Kiantonucci, S. and Lopez-Rodriguez, E. and McDonald, M. and Medling, A. and Miley, G. and Omoruyi, O. and Perlman, E. and Perley, D. and Perley, R. and Sebastian, B. and Singha, M. and Sparks, W. and Tremblay, G. and Wilkes, B. and Willner, S. and Worrall, D.},
   journal={The Astrophysical Journal},
-  year={2024},
+  year={2025},
   type={contributing},
   preview={ogle24.png},
-  additional_info={*submitted to ApJ*}
+  additional_info={*Accepted to ApJ*}
 }
 
-@counpublished{cohen2024cosmic,
+@counpublished{cohen2025cosmic,
   title={The Cosmic Baryon Cycle in IllustrisTNG: flows of mass, energy, and metals},
-  year={2024},
+  year={2025},
   journal=mnras,
   type={contributing},
   author={Cohen, Y. and Pandya, V. and Omoruyi, O. and Terrazas, B. and Somerville, R. and Hernquist, L.},
-  additional_info={*In preparation. Expected on arXiv by late F24-S25*}
+  additional_info={*In preparation. Expected on arXiv by late S25*}
 }
 
-@counpublished{elford2024close,
+@counpublished{elford2025close,
   title={The Close AGN Reference Survey (CARS): A comparison between sub-mm and optical AGN diagnostic diagrams},
   author={Elford, J. S. and Davis, T. A. and Ruffa, I. and Omoruyi, O. and Tremblay, G. R. and Singha, M. and Gaspari, M. and Winkel, N.},
-  year={2024},
+  year={2025},
   journal=apj,
   type={contributing},
-  additional_info={*In preparation. Expected on arXiv late Fall 2024*}
+  additional_info={*Submitted to ApJ. Expected on arXiv by late S25*}
 }
