--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,6 +36,7 @@
 @leadunpublished{omoruyi2025hist,
   title={The Extractive Gaze: How Race, Gender and Capitalism Shaped the Development of American Astronomical Stations in South Africa},
   author={Omoruyi, O.},
+  abstract={Testing 123},
   year={2025},
   numpages={30},
   preview={boyden_carina_workers.jpg}
