--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@
   type={lead},
   video={https://www.youtube.com/watch?v=blvcW0M-REU},
   html={https://ui.adsabs.harvard.edu/abs/2024ApJ...963....1O/abstract},
-  summary={Using high-resolution multi-wavelength data from Chandra, HST, ALMA, and LOFAR, we discovered a chain of 19 young stellar “beads” connected to a giant X-ray cavity in an intermediate-redshift cool-core cluster. We show that this star formation pattern likely arose from gas cooling in the turbulent core, a powerful AGN outburst displacing cold gas, and tidal interactions from merging galaxies. These results highlight how feedback, cooling, and mergers interact in complex ways, offering insight into the chaotic processes that shaped galaxies and clusters in the early Universe.}
+  additional_info={Using high-resolution multi-wavelength data from Chandra, HST, ALMA, and LOFAR, we discovered a chain of 19 young stellar “beads” connected to a giant X-ray cavity in an intermediate-redshift cool-core cluster. We show that this star formation pattern likely arose from gas cooling in the turbulent core, a powerful AGN outburst displacing cold gas, and tidal interactions from merging galaxies. These results highlight how feedback, cooling, and mergers interact in complex ways, offering insight into the chaotic processes that shaped galaxies and clusters in the early Universe.}
 }
 
 
